bin_PROGRAMS = Mx prefixMxFile idxmx epsffit
bin_SCRIPTS = epstogif
Mx_SOURCES = Mx.c Index.c Def.c Form.c Tok.c Code.c Display.c Print.c Io.c \
	     Sys.c disclaimer.c  Tex2Html.c Mx.h MxFcnDef.h
prefixMxFile_SOURCES = prefixMxFile.c disclaimer.c
idxmx_SOURCES = idxmx.c
epsffit_SOURCES = epsffit.c
EXTRA_DIST = warning.gif
